upgrade react version to 18

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <noscript>Please allow JavaScript in your app!</noscript>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
