--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <title>Retron Template</title>
     <style>
       body { margin: 0 }
@@ -14,6 +14,6 @@
   <body>
     <noscript>Please allow JavaScript in your app!</noscript>
     <div id="app"></div>
-    <script type="module" src="./index.jsx"></script>
   </body>
+  <script type="module" src="./index.jsx"></script>
 </html>
