--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,5 +10,5 @@
     <noscript>Please allow JavaScript in your app!</noscript>
     <div id="app"></div>
   </body>
-  <script type="module" src="./index.jsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </html>
